Upd: pages style

--- a/frontend/app/src/app/app.component.html
+++ b/frontend/app/src/app/app.component.html
@@ -3,12 +3,10 @@
 <app-navigation></app-navigation>
 <router-outlet></router-outlet>
     <div class="container-fluid">
-        <br>
-        <br>
-        <hr style="color: azure">
+        <hr style="color: #023E8A; height: 2px">
         <div class="text-center text-dark" id="creds">
           <p> Follow on: </p>
-            <a style="color: inherit" href="https://github.com/RudeZwloki7">
+            <a style="color: inherit" href="https://github.com/Jonesso">
               <img src="assets/github_logo.png" alt="GitHub">
             </a>
         </div>
