--- a/frontend/app/src/app/pages/card/card.component.html
+++ b/frontend/app/src/app/pages/card/card.component.html
@@ -1,7 +1,7 @@
-<h1 align="center" class="display-4 mb-5 text-dark">{{title}}</h1>
+<h1 align="center" class="display-4 my-5 text-dark">{{title}}</h1>
 <div class="row card-deck text-center">
   <div *ngFor="let itemInfo of page?.content" class="col-lg-4 ">
-    <div class="card mb-4 bg-dark rounded"  >
+    <div class="card mb-4 rounded">
       <img height="50%" class="card-img-top" src="{{itemInfo.itemIcon}}" alt="{{itemInfo.itemName}}">
       <div class="card-body">
         <h4 class="card-title text-dark">{{itemInfo.itemName}}</h4>
