--- a/frontend/app/src/app/pages/item-detail/detail.component.html
+++ b/frontend/app/src/app/pages/item-detail/detail.component.html
@@ -1,7 +1,7 @@
-<h1 align="center" class="display-4 mb-5 text-dark">{{title}}</h1>
+<h1 align="center" class="display-4 my-4 text-dark">{{title}}</h1>
 <div class="row text-center justify-content-center">
-  <div class="col-lg-6 ">
-    <div class="card mb-4 bg-dark">
+  <div class="col-lg-6">
+    <div class="card mb-4">
       <img height="60%" class="card-img-top" src="{{itemInfo?.itemIcon}}" alt="{{itemInfo?.itemName}}">
       <div class="card-body">
         <h4 class="card-title ">{{itemInfo?.itemName}}</h4>
