--- a/frontend/app/src/app/pages/login/login.component.html
+++ b/frontend/app/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<h1 align="center" class="display-4 mb-5 text-dark">Sign In</h1>
+<h1 align="center" class="display-4 my-4 text-dark">Sign In</h1>
 <div style="width:40%; margin: 25px auto" class="text-dark">
 
     <div class="alert alert-danger" *ngIf="isInvalid">
